--- a/mywalletX/css/home.css
+++ b/mywalletX/css/home.css
@@ -38,9 +38,6 @@ background:#fff;
 color:#09C;
 }
 
-
-
-
 #pagHeader {
     display: block;
     height: 90px;
@@ -48,11 +45,12 @@ color:#09C;
     width: 100%;
 }
 
-
-#pagHeaderLogo {
-    border: 0 none;
-    height: 90px;
-    width: 100%;
+#logo img {
+  max-width: 100%;
+  height: 90px;
+  width: 100%;
+  display:block;
+  position: absolute; 
 }
 
 #apDivLeft {
