--- a/css/currentDay.css
+++ b/css/currentDay.css
@@ -1,5 +1,4 @@
-body
-{
+body {
   font-family: "Helvetica Neue Bold", arial, helvetica, sans-serif;
   font-size: 100%;
   margin: 10px;
@@ -7,14 +6,12 @@ body
   background-color: #cecece;
 }
 
-h1
-{
+h1 {
   margin: 0;
   font-weight: normal;
 }
 
-time.icon
-{
+time.icon {
   font-size: 1em; /* change icon size */
   display: block;
   position: relative;
@@ -23,7 +20,8 @@ time.icon
   background-color: #fff;
   margin: 2em auto;
   border-radius: 0.6em;
-  box-shadow: 0 1px 0 #bdbdbd, 0 2px 0 #fff, 0 3px 0 #bdbdbd, 0 4px 0 #fff, 0 5px 0 #bdbdbd, 0 0 0 1px #bdbdbd;
+  box-shadow: 0 1px 0 #bdbdbd, 0 2px 0 #fff, 0 3px 0 #bdbdbd, 0 4px 0 #fff,
+    0 5px 0 #bdbdbd, 0 0 0 1px #bdbdbd;
   overflow: hidden;
   -webkit-backface-visibility: hidden;
   -webkit-transform: rotate(0deg) skewY(0deg);
@@ -31,8 +29,7 @@ time.icon
   transform-origin: 50% 10%;
 }
 
-time.icon *
-{
+time.icon * {
   display: block;
   width: 100%;
   font-size: 1em;
@@ -41,8 +38,7 @@ time.icon *
   text-align: center;
 }
 
-time.icon strong
-{
+time.icon strong {
   position: absolute;
   top: 0;
   padding: 0.4em 0;
@@ -52,15 +48,13 @@ time.icon strong
   box-shadow: 0 2px 0 #fd9f1b;
 }
 
-time.icon em
-{
+time.icon em {
   position: absolute;
   bottom: 0.3em;
   color: #fd9f1b;
 }
 
-time.icon span
-{
+time.icon span {
   width: 100%;
   font-size: 2.8em;
   letter-spacing: -0.05em;
@@ -68,24 +62,44 @@ time.icon span
   color: #2f2f2f;
 }
 
-time.icon:hover, time.icon:focus
-{
+time.icon:hover,
+time.icon:focus {
   -webkit-animation: swing 0.6s ease-out;
   animation: swing 0.6s ease-out;
 }
 
 @-webkit-keyframes swing {
-  0%   { -webkit-transform: rotate(0deg)  skewY(0deg); }
-  20%  { -webkit-transform: rotate(12deg) skewY(4deg); }
-  60%  { -webkit-transform: rotate(-9deg) skewY(-3deg); }
-  80%  { -webkit-transform: rotate(6deg)  skewY(-2deg); }
-  100% { -webkit-transform: rotate(0deg)  skewY(0deg); }
+  0% {
+    -webkit-transform: rotate(0deg) skewY(0deg);
+  }
+  20% {
+    -webkit-transform: rotate(12deg) skewY(4deg);
+  }
+  60% {
+    -webkit-transform: rotate(-9deg) skewY(-3deg);
+  }
+  80% {
+    -webkit-transform: rotate(6deg) skewY(-2deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg) skewY(0deg);
+  }
 }
 
 @keyframes swing {
-  0%   { transform: rotate(0deg)  skewY(0deg); }
-  20%  { transform: rotate(12deg) skewY(4deg); }
-  60%  { transform: rotate(-9deg) skewY(-3deg); }
-  80%  { transform: rotate(6deg)  skewY(-2deg); }
-  100% { transform: rotate(0deg)  skewY(0deg); }
+  0% {
+    transform: rotate(0deg) skewY(0deg);
+  }
+  20% {
+    transform: rotate(12deg) skewY(4deg);
+  }
+  60% {
+    transform: rotate(-9deg) skewY(-3deg);
+  }
+  80% {
+    transform: rotate(6deg) skewY(-2deg);
+  }
+  100% {
+    transform: rotate(0deg) skewY(0deg);
+  }
 }
